# ModernCPP

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in
src/: README.md
src/language/: CMakeLists.txt  README.md
src/language/2.1-auto-type/: CMakeLists.txt  README.md  main.cpp
src/language/2.10-ctor-from-ctor/: CMakeLists.txt  README.md  main.cpp
src/language/2.11-inherit-ctor/: CMakeLists.txt  README.md  main.cpp
src/language/2.12-unrestricted-union/: CMakeLists.txt  README.md  main.cpp
src/language/2.2-post-return-type/: CMakeLists.txt  README.md  main.cpp
src/language/2.3-typed-enum/: CMakeLists.txt  README.md  main.cpp
src/language/2.4-exception-spec/: CMakeLists.txt  README.md  main.cpp
src/language/2.5-attributes/: CMakeLists.txt  README.md  main.cpp
src/language/2.6-rvalue-ref/: CMakeLists.txt  README.md  main.cpp
src/language/2.7-explicit-override/: CMakeLists.txt  README.md  main.cpp
src/language/2.8-final-override/: CMakeLists.txt  README.md  main.cpp
src/language/2.9-auto-impl/: CMakeLists.txt  README.md  main.cpp
src/templates/: CMakeLists.txt  README.md
src/templates/3.1-variable-templates/: CMakeLists.txt  README.md  main.cpp
